# TinyGrapeKit

./: README.md  build.sh
app/FilterFusion/: CMakeLists.txt
app/FilterFusion/example/: RunKAISTData.cpp
app/FilterFusion/include/FilterFusion/: FilterFusionSystem.h  IMUUpdater.h  Initializer.h  Parameter.h  State.h  StateBlock.h
app/FilterFusion/params/: KAIST.yaml
app/FilterFusion/src/: FilterFusionSystem.cpp  GpsUpdater.cpp  IMUUpdater.cpp  Initializer.cpp  ParamLoader.cpp  StateAugmentor.cpp  UpdaterUtil.cpp  VisualUpdater.cpp
app/SINS/: CMakeLists.txt
app/SINS/Core/Base/: BaseTypes.h  Index.h  InsState.h  SensorDataTypes.h
app/SINS/Core/Earth/: EarthModel.cpp  EarthModel.h
app/SINS/Core/ErrorModel/: ErrorModel.cpp  ErrorModel.h
app/SINS/Core/InsUpdate/: InsState.h  InsUpdater.cpp  InsUpdater.h
app/SINS/Examples/: InsUpdateExample.cpp  StationaryCoarseAlignmentExample.cpp
app/VWO_MSCKF/: CMakeLists.txt
app/VWO_MSCKF/example/: RunCircleSimData.cpp  RunKAISTData.cpp  RunRedBotData.cpp  RunSimData.cpp  TestVisualWheelCircleSim.cpp
app/VWO_MSCKF/include/VWO/: GpsUpdater.h  Initializer.h  ParamLoader.h  Parameter.h  PlaneUpdater.h  Propagator.h  State.h  StateAugmentor.h  StateBlock.h  StateMarginalizer.h  Updater.h  UpdaterUtil.h  VWOSystem.h  VisualUpdater.h  Visualizer.h
app/VWO_MSCKF/params/: KAIST.yaml  RedBot.yaml
app/VWO_MSCKF/src/: GpsUpdater.cpp  Initializer.cpp  ParamLoader.cpp  PlaneUpdater.cpp  Propagator.cpp  StateAugmentor.cpp  StateMarginalizer.cpp  Updater.cpp  UpdaterUtil.cpp  VWOSystem.cpp  VisualUpdater.cpp  Visualizer.cpp
(+2 files in other folders)
